[gd_scene load_steps=11 format=3 uid="uid://cqm885sbav3vf"]

[ext_resource type="Script" path="res://characters/Koopa/Koopa.gd" id="1_45xqa"]
[ext_resource type="Texture2D" uid="uid://be1ry55jkijoq" path="res://spritesheets/MarioAssets/Characters/Enemies.png" id="2_ws6gc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ja2p"]
atlas = ExtResource("2_ws6gc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv3g4"]
atlas = ExtResource("2_ws6gc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fccms"]
atlas = ExtResource("2_ws6gc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uqpg"]
atlas = ExtResource("2_ws6gc")
region = Rect2(94, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r1iw"]
atlas = ExtResource("2_ws6gc")
region = Rect2(126, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8r6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ja2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv3g4")
}],
"loop": true,
"name": &"atack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fccms")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r1iw")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sswk"]
size = Vector2(16, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_hf17m"]
radius = 9.0

[node name="Koopa" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 519
script = ExtResource("1_45xqa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p8r6d")
animation = &"atack"
frame_progress = 0.237738

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_5sswk")

[node name="RayCastDirection" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(11, 0)
collision_mask = 519

[node name="RayCastAtack" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(50, 0)
collision_mask = 512

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(3, 1.4)
target_position = Vector2(0, -10)
collision_mask = 512

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AtackTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ActivateDeadArea" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeadArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 512
collision_priority = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_hf17m")
disabled = true

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
[connection signal="timeout" from="AtackTime" to="." method="_on_atack_time_timeout"]
[connection signal="timeout" from="ActivateDeadArea" to="." method="_on_activate_dead_area_timeout"]
[connection signal="body_entered" from="DeadArea" to="." method="_on_dead_area_body_entered"]
